--- a/Stambul_DB/Pages/MajorRoads.xaml
+++ b/Stambul_DB/Pages/MajorRoads.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Stambul_DB.Pages"
         mc:Ignorable="d"
-        Title="MajorRoads" Height="450" Width="800">
-    <Grid>
-        
+        Title="MajorRoads" Height="1024" Width="1440">
+    <Grid Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition ></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Button x:Name="Add" FontFamily="Arial" FontSize="14" Width="100" Height="40" Click="ButtonAdd" Content="Save"/>
+            <Button x:Name="Delete" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="10" Click="ButtonDel" Content="Delete"/>
+            <Button x:Name="Back" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="1100,15" Content="Back" Click="Back_Click" />
+        </StackPanel>
+
+        <StackPanel>
+            <DataGrid AutoGenerateColumns="False" ColumnWidth="*" x:Name="Major_Roads">
+                <DataGrid.Columns>
+
+                    <DataGridTextColumn Binding="{Binding id_Major_Roads}" Width="100" Header="id_Major_Roads"/>
+                    <DataGridTextColumn Binding="{Binding Year_MR}"  Width="200" Header="Year_MR"/>
+                    <DataGridTextColumn Binding="{Binding Image_MR}"  Width="100" Header="Image_MR"/>
+                    <DataGridTextColumn Binding="{Binding Scheme_MR}"  Width="100" Header="Scheme_MR"/>
+                </DataGrid.Columns>
+
+            </DataGrid>
+        </StackPanel>
+
     </Grid>
 </Window>
