--- a/Stambul_DB/Pages/SpecialMaps.xaml
+++ b/Stambul_DB/Pages/SpecialMaps.xaml
@@ -5,10 +5,32 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Stambul_DB.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1024" d:DesignWidth="1440"
       Title="SpecialMaps">
 
-    <Grid>
-        
+   <Grid Background="White">
+    <Grid.RowDefinitions>
+        <RowDefinition ></RowDefinition>
+        <RowDefinition Height="70"></RowDefinition>
+    </Grid.RowDefinitions>
+    <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <Button x:Name="Add" FontFamily="Arial" FontSize="14" Width="100" Height="40" Click="ButtonAdd" Content="Save"/>
+        <Button x:Name="Delete" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="10" Click="ButtonDel" Content="Delete"/>
+        <Button x:Name="Back" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="1100,15" Content="Back" Click="Back_Click" />
+    </StackPanel>
+
+    <StackPanel>
+        <DataGrid AutoGenerateColumns="False" ColumnWidth="*" x:Name="Special_Maps">
+            <DataGrid.Columns>
+
+                    <DataGridTextColumn Binding="{Binding id_Special_Maps}" Width="100" Header="id_Special_Maps"/>
+                <DataGridTextColumn Binding="{Binding Year_SM}"  Width="200" Header="Year_SM"/>
+                <DataGridTextColumn Binding="{Binding Name_SM}"  Width="100" Header="Name_SM"/>
+                    <DataGridTextColumn Binding="{Binding Image_SM}"  Width="100" Header="Image_SM"/>
+                </DataGrid.Columns>
+
+        </DataGrid>
+    </StackPanel>
+
     </Grid>
 </Window>
