--- a/Stambul_DB/Pages/CityMaps.xaml
+++ b/Stambul_DB/Pages/CityMaps.xaml
@@ -16,6 +16,7 @@
             <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <Button x:Name="Add" FontFamily="Arial" FontSize="14" Width="100" Height="40" Click="ButtonAdd" Content="Save"/>
             <Button x:Name="Delete" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="10" Click="ButtonDel" Content="Delete"/>
+            <Button x:Name="SaveImage" FontFamily="Arial" FontSize="14" Width="100" Height="40" Click="Add_I_Click" Content="Save Image"/>
             <Button x:Name="Back" FontFamily="Arial" FontSize="14" Width="100" Height="40" Margin="1100,15" Content="Back" Click="Back_Click" />
         </StackPanel>
 
@@ -25,12 +26,12 @@
 
                         <DataGridTextColumn Binding="{Binding id_City_Maps}" Width="100" Header="Id_City_Maps"/>
                         <DataGridTextColumn Binding="{Binding Year_CM}"  Width="200" Header="Year_CM"/>
-                        <DataGridTextColumn Binding="{Binding Image_CM}"  Width="100" Header="Image_CM"/>
+                        <DataGridTextColumn x:Name="Image_CM" Binding="{Binding Image_CM}"  Width="100" Header="Image_CM"/>
                     <DataGridTextColumn Binding="{Binding Id_User}"  Width="100" Header="Id_User"/>
                 </DataGrid.Columns>
 
                 </DataGrid>
             </StackPanel>
-
-        </Grid>
+        <Image x:Name="playim"  HorizontalAlignment="Left" Height="170" Margin="714,313,0,0" VerticalAlignment="Top" Width="192"/>
+    </Grid>
 </Window>
