--- a/Stambul_DB/Pages/IstanbulDB.xaml
+++ b/Stambul_DB/Pages/IstanbulDB.xaml
@@ -19,15 +19,15 @@
                     <CheckBox x:Name="_1882_CM1" Foreground="#FFF7F2F2" Checked="_1882_CM1_IsCheked" Unchecked="_1882_CM1_Unchecked">1882 City Maps</CheckBox>
                     <CheckBox x:Name="_1913_CM1" Foreground="#FFF7F2F2" Checked="_1913_CM1_IsCheked" Unchecked="_1913_CM1_Unchecked">1913 City Maps</CheckBox>
                     <CheckBox x:Name="_1918_CM1" Foreground="#FFF7F2F2" Checked="_1918_CM1_IsCheked" Unchecked="_1918_CM1_Unchecked">1918 City Maps</CheckBox>
-                  
-                
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="RegionalMaps" Header="Regional Maps" Foreground="#FFF0E7E7" FontSize="18">
                 <StackPanel>
                     <CheckBox x:Name="_1899_RM1" Checked="_1899_RM1_IsCheked" Unchecked="_1899_RM1_Unchecked" Foreground="#FFF7F2F2">1899 Regional Maps</CheckBox>
                     <CheckBox x:Name="_1900_RM1" Checked="_1900_RM1_IsCheked" Unchecked="_1900_RM1_Unchecked" Foreground="#FFF7F2F2">1900 Regional Maps</CheckBox>
-                   
+
 
                 </StackPanel>
             </Expander>
@@ -35,8 +35,8 @@
                 <StackPanel>
                     <CheckBox x:Name="_1875_SM1" Checked="_1875_SM1_IsCheked" Unchecked="_1875_SM1_Unchecked" Foreground="#FFF7F2F2">1875 Fire Maps</CheckBox>
                     <CheckBox x:Name="_1865_SM1" Checked="_1865_SM1_IsCheked" Unchecked="_1865_SM1_Unchecked" Foreground="#FFF7F2F2">1865 Cholera Outbreak Interactive Maps</CheckBox>
-                    
-                    
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="PervetitichMaps" Header="Pervetitich Maps" Foreground="#FFF0E7E7" FontSize="18">
@@ -47,8 +47,8 @@
                     <CheckBox  x:Name="_1939_K1" Checked="_1939_K1_IsCheked" Unchecked="_1939_K1_Unchecked" Foreground="#FFF7F2F2">1939 K.cesme</CheckBox>
                     <CheckBox  x:Name="_1941_E1" Checked="_1941_E1_IsCheked" Unchecked="_1941_E1_Unchecked" Foreground="#FFF7F2F2">1941 Eminonu</CheckBox>
                     <CheckBox  x:Name="_1944_T1" Checked="_1944_T1_IsCheked" Unchecked="_1944_T1_Unchecked" Foreground="#FFF7F2F2">1944 Taksim</CheckBox>
-                 
-                    
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="SatelliteMaps" Header="Satellite Maps" Foreground="#FFF0E7E7" FontSize="18">
@@ -57,8 +57,8 @@
                     <CheckBox  x:Name="_1966_SAM1" Checked="_1966_SAM1_IsCheked" Unchecked="_1966_SAM1_Unchecked" Foreground="#FFF7F2F2">1966 Satellite Maps</CheckBox>
                     <CheckBox  x:Name="_1970_SAM1" Checked="_1970_SAM1_IsCheked" Unchecked="_1970_SAM1_Unchecked" Foreground="#FFF7F2F2">1970 Satellite Maps</CheckBox>
                     <CheckBox  x:Name="_1982_SAM1" Checked="_1982_SAM1_IsCheked" Unchecked="_1982_SAM1_Unchecked" Foreground="#FFF7F2F2">1982 Satellite Maps</CheckBox>
-                    
- 
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="MajorRoads" Header="Major Roads" Foreground="#FFF0E7E7" FontSize="18">
@@ -68,8 +68,8 @@
                     <CheckBox x:Name="_1966_MR1"  Checked="_1966_MR1_IsCheked" Unchecked="_1966_MR1_Unchecked" Foreground="#FFF7F2F2">1966 Major Roads</CheckBox>
                     <CheckBox x:Name="_1970_MR1"  Checked="_1970_MR1_IsCheked" Unchecked="_1970_MR1_Unchecked" Foreground="#FFF7F2F2">1970 Major Roads</CheckBox>
                     <CheckBox x:Name="_1982_MR1"  Checked="_1982_MR1_IsCheked" Unchecked="_1982_MR1_Unchecked" Foreground="#FFF7F2F2">1982 Major Roads</CheckBox>
-                   
-                   
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="SpacesofEverydayLife" Header="Spaces of Everyday Life" Foreground="#FFF0E7E7" FontSize="18">
@@ -77,8 +77,8 @@
                     <CheckBox x:Name="B1"  Checked="B1_IsCheked" Unchecked="B1_Unchecked" Foreground="#FFF7F2F2">Beaches</CheckBox>
                     <CheckBox x:Name="C1" Checked="C1_IsCheked" Unchecked="C1_Unchecked" Foreground="#FFF7F2F2">Casinos</CheckBox>
                     <CheckBox x:Name="S1" Checked="S1_IsCheked" Unchecked="S1_Unchecked" Foreground="#FFF7F2F2">Spaces of Beyoglu</CheckBox>
-                   
-                   
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="Transportation" Header="Transportation" Foreground="#FFF0E7E7" FontSize="18">
@@ -94,55 +94,59 @@
                 <StackPanel>
                     <CheckBox x:Name="_1_MP1" Checked="_1_MP1_IsCheked" Unchecked="_1_MP1_Unchecked" Foreground="#FFF7F2F2">Prost Transportation Study</CheckBox>
                     <CheckBox x:Name="_2_MP1" Checked="_2_MP1_IsCheked" Unchecked="_2_MP1_Unchecked" Foreground="#FFF7F2F2">Prost Master Plan Model</CheckBox>
-                
-                    
+
+
                 </StackPanel>
             </Expander>
             <Expander x:Name="CityGrowth" Header="City Growth" Foreground="#FFF0E7E7" FontSize="18">
                 <StackPanel>
                     <CheckBox x:Name="_1920_1994_CG1" Checked="_1920_1994_CG1_IsCheked" Unchecked="_1920_1994_CG1_Unchecked" Foreground="#FFF7F2F2">1920-1994 Diagram</CheckBox>
                     <CheckBox x:Name="_1930_CG1" Checked="_1930_CG1_IsCheked" Unchecked="_1930_CG1_Unchecked" Foreground="#FFF7F2F2">1930 Municipal Border</CheckBox>
-                   
-                    
+
+
                 </StackPanel>
             </Expander>
             <Button x:Name="Add_CM" Content="Изменить" Margin="0,0,191,0" Height="39" Background="#FF24CB1C" Click="Add_CM_Click" Initialized="Add_initialaized"/>
+            <Button x:Name="Add_I" Content="Добавить карту" Margin="0,0,191,0" Height="39" Background="#FF1C5CCB" Click="Add_I_Click" Initialized="Add_initialaized"/>
         </StackPanel>
-        <Image x:Name="_1815_CM" Source="1815_CM.jpg" Margin="317,0,106,153" Visibility="Hidden" />
-            <Image x:Name="_1821_CM" Source="1821_CM.jpg" Margin="317,0,106,153" Visibility="Hidden" />
-            <Image x:Name="_1853_CM" Source="1853_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-            <Image x:Name="_1860_CM" Source="1860_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-            <Image x:Name="_1882_CM" Source="1882_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-            <Image x:Name="_1913_CM" Source="1913_CM.jpg" Margin="317,0,106,153"    Visibility="Hidden" />
-        <Image x:Name="_1918_CM" Source="1918_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1899_RM" Source="1899_RM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1900_RM" Source="1900_RM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1875_SM" Source="1875_SM.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1865_SM" Source="1865_SM.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1923_B" Source="1923_B.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1924_N" Source="1924_N.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1927_O" Source="1927_O.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1939_K" Source="1939_K.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1941_E" Source="1941_E.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1944_T" Source="1944_T.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1946_SAM" Source="1946_SAM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1966_SAM" Source="1966_SAM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1970_SAM" Source="1970_SAM.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1982_SAM" Source="1982_SAM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1922_MR" Source="1922_MR.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1946_MR" Source="1946_MR.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1966_MR" Source="1966_MR.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1970_MR" Source="1966_MR.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1982_MR" Source="1982_MR.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="Beaches" Source="Beaches.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="Casinos" Source="Casinos.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="SpacesOfBeyoglu" Source="Spaces_of_Beyoglu.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1922_TF" Source="1922_TF.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1922_TT" Source="1922_TT.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1922_TWT" Source="1922_TWT.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1_MP" Source="1_MP.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_2_MP" Source="2_MP.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1920_1994_CG" Source="1920-1994_CG.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
-        <Image x:Name="_1930_CG" Source="1930_CG.JPG" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1815_CM" Source="1815_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153" Visibility="Hidden" />
+        <Image x:Name="_1821_CM" Source="1821_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153" Visibility="Hidden" />
+        <Image x:Name="_1853_CM" Source="1853_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1860_CM" Source="1860_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1882_CM" Source="1882_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1913_CM" Source="1913_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153"    Visibility="Hidden" />
+        <Image x:Name="_1918_CM" Source="1918_CM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1899_RM" Source="1899_RM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1900_RM" Source="1900_RM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1875_SM" Source="1875_SM.JPG" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1865_SM" Source="1865_SM.JPG" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1923_B" Source="1923_B.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1924_N" Source="1924_N.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1927_O" Source="1927_O.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1939_K" Source="1939_K.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1941_E" Source="1941_E.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1944_T" Source="1944_T.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1946_SAM" Source="1946_SAM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1966_SAM" Source="1966_SAM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1970_SAM" Source="1970_SAM.JPG" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1982_SAM" Source="1982_SAM.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1922_MR" Source="1922_MR.jpg" Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1946_MR" Source="1946_MR.jpg"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1966_MR" Source="1966_MR.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1970_MR" Source="1966_MR.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1982_MR" Source="1982_MR.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="Beaches" Source="Beaches.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="Casinos" Source="Casinos.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="SpacesOfBeyoglu" Source="Spaces_of_Beyoglu.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1922_TF" Source="1922_TF.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1922_TT" Source="1922_TT.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1922_TWT" Source="1922_TWT.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1_MP" Source="1_MP.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_2_MP" Source="2_MP.jpg"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1920_1994_CG" Source="1920-1994_CG.jpg"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1930_CG" Source="1930_CG.JPG"  Height="993" Width="1100" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="playim"  HorizontalAlignment="Left" Height="993" Width="1100" Margin="322,-4,0,0" VerticalAlignment="Top"/>
+
+
     </Grid>
 </Window>
